fixed alignment of slider text, generating gallery in JS, fixed arrow in desktop

--- a/arrow.css
+++ b/arrow.css
@@ -39,3 +39,9 @@
         transform: rotate(45deg) translate(20px, 20px);
     }
 }
+
+@media (min-width: 1000px) {
+    .arrow {
+        top: 75%;
+    }
+}
